增加全局自定义布局配置

--- a/loadviewhelper/src/main/res/layout/load_ing.xml
+++ b/loadviewhelper/src/main/res/layout/load_ing.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:background="#5555"
+    android:background="#cac9c8"
     android:orientation="vertical" >
 
     <ProgressBar
